--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-axios": "2.1.5",
     "vue-router": "^3.1.5",
+    "vue2-verify": "^1.1.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
