--- a/RearEnd/SmallProfitMall/pom.xml
+++ b/RearEnd/SmallProfitMall/pom.xml
@@ -160,6 +160,20 @@
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
+
+    <!--短信接口-->
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>aliyun-java-sdk-core</artifactId>
+      <version>3.7.1</version> <!-- 注：如提示报错，先升级基础包版，无法解决可联系技术支持 -->
+    </dependency>
+
+    <dependency>
+      <groupId>com.aliyun</groupId>
+      <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+
   </dependencies>
 
   <build>
