--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "0.19.2",
     "core-js": "^3.6.4",
+    "default-passive-events": "^1.0.10",
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
     "vue-axios": "2.1.5",
