--- a/RearEnd/SmallProfitMall/pom.xml
+++ b/RearEnd/SmallProfitMall/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -25,6 +24,7 @@
     <mybatis.version>3.4.5</mybatis.version>
     <lombok.version>1.16.16</lombok.version>
     <jackson-databind.version>2.9.8</jackson-databind.version>
+
   </properties>
 
   <dependencies>
@@ -173,6 +173,19 @@
       <artifactId>aliyun-java-sdk-dysmsapi</artifactId>
       <version>1.1.0</version>
     </dependency>
+
+    <!--缓存-->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>2.1.2.RELEASE</version>
+    </dependency>
+
 
   </dependencies>
 
