--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-axios": "2.1.5",
     "vue-router": "^3.1.5",
+    "vue2-animate": "^2.1.3",
     "vue2-verify": "^1.1.5",
     "vuex": "^3.1.2"
   },
