--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
     "vue-axios": "2.1.5",
+    "vue-piczoom": "^1.0.6",
     "vue-router": "^3.1.5",
     "vue2-animate": "^2.1.3",
     "vue2-verify": "^1.1.5",
