--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -7,14 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@liripeng/vue-audio-player": "^1.0.5",
     "axios": "0.19.2",
     "core-js": "^3.6.4",
     "default-passive-events": "^1.0.10",
     "element-ui": "^2.13.0",
     "vue": "^2.6.11",
     "vue-axios": "2.1.5",
-    "vue-piczoom": "^1.0.6",
+    "vue-photo-zoom-pro": "^1.3.8",
     "vue-router": "^3.1.5",
+    "vue-video-player": "^5.0.2",
     "vue2-animate": "^2.1.3",
     "vue2-verify": "^1.1.5",
     "vuex": "^3.1.2"
