--- a/RearEnd/SmallProfitMall/pom.xml
+++ b/RearEnd/SmallProfitMall/pom.xml
@@ -230,6 +230,26 @@
     <version>[7.2.0, 7.2.99]</version>
   </dependency>
 
+
+    <!--验证码-->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.4.12</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.vaptcha</groupId>
+      <artifactId>sdk</artifactId>
+      <version>0.0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
