--- a/RearEnd/SmallProfitMall/pom.xml
+++ b/RearEnd/SmallProfitMall/pom.xml
@@ -268,6 +268,21 @@
       <version>0.4.8</version>
     </dependency>
 
+    <!--文件解析器-->
+
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
+
+
   </dependencies>
 
   <build>
