修改头像接口优化

--- a/RearEnd/SmallProfitMall/src/main/resources/jdbc.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://120.25.154.76:3306/SmallProfitMall?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://120.25.154.76:3306/SmallProfitMall?useUnicode=true&characterEncoding=UTF8
 jdbc.username=MuGe
 jdbc.password=123456
 
