更改缓存库 优化图片商品util

--- a/RearEnd/SmallProfitMall/src/main/resources/redis.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/redis.properties
@@ -2,10 +2,10 @@ redis.maxTotal=10
 redis.maxIdle=5
 redis.maxWaitMillis=2000
 redis.testOnBorrow=true
-redis.host=121.36.8.210
+redis.host=123.56.151.167
 redis.port=6379
 redis.timeout=0
-redis.password=test
+redis.password=123456
 redis.testWhileIdle=true 
 redis.timeBetweenEvictionRunsMillis=30000  
 redis.numTestsPerEvictionRun=50 
