修改邮箱接口

--- a/RearEnd/SmallProfitMall/src/main/resources/rabbitMq.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/rabbitMq.properties
@@ -1,8 +1,5 @@
-mq.user=guest
-mq.pwd=guest
-mq.ip=39.101.192.13
-mq.port=5672
-#队列交换机名
-exchange=TestExchange
-#队列名
-routeKey=testQueue
+rabbitmq.host=39.101.192.13
+rabbitmq.port=5672
+rabbitmq.username=guest
+rabbitmq.password=guest
+rabbitmq.vhost=/
