--- a/RearEnd/SmallProfitMall/pom.xml
+++ b/RearEnd/SmallProfitMall/pom.xml
@@ -221,7 +221,7 @@
     <dependency>
       <groupId>com.qiniu</groupId>
       <artifactId>qiniu-java-sdk</artifactId>
-      <version>7.1.1</version>
+      <version>7.2.11</version>
     </dependency>
 
     <dependency>
@@ -289,6 +289,71 @@
       <groupId>com.alibaba</groupId>
       <artifactId>druid</artifactId>
       <version>1.1.11</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>compile</scope>
+    </dependency>
+
+    <!--spring整合rabbitmq-->
+    <dependency>
+      <groupId>org.springframework.amqp</groupId>
+      <artifactId>spring-rabbit</artifactId>
+      <version>1.4.0.RELEASE</version>
+    </dependency>
+
+    <!--MQ-->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+    </dependency>
+
+    <!--发送邮件-->
+    <!--spring支持-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>5.0.0.RELEASE</version>
+    </dependency>
+
+
+    <!--邮件发送-->
+    <!--    <dependency>-->
+    <!--      <groupId>mail.jar</groupId>-->
+    <!--      <artifactId>mail.jar</artifactId>-->
+    <!--      <version>1.4</version>-->
+    <!--    </dependency>-->
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-email</artifactId>
+      <version>1.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+      <version>1.6.2</version>
+    </dependency>
+
+    <!--验证邮箱-->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.56</version>
+    </dependency>
+    <dependency>
+      <groupId>dnsjava</groupId>
+      <artifactId>dnsjava</artifactId>
+      <version>2.1.7</version>
+    </dependency>
+
+    <dependency>
+      <groupId>commons-net</groupId>
+      <artifactId>commons-net</artifactId>
+      <version>3.6</version>
     </dependency>
 
 
