--- a/RearEnd/SmallProfitMall/pom.xml
+++ b/RearEnd/SmallProfitMall/pom.xml
@@ -321,6 +321,15 @@
     </dependency>
 
 
+    <!--腾讯验证码-->
+
+      <dependency>
+          <groupId>com.tencentcloudapi</groupId>
+          <artifactId>tencentcloud-sdk-java</artifactId>
+          <version>3.0.8</version><!-- 注：这里只是示例版本号，请到 https://mvnrepository.com/artifact/com.tencentcloudapi/tencentcloud-sdk-java 获取最新版本号 -->
+      </dependency>
+
+
     <!--邮件发送-->
     <!--    <dependency>-->
     <!--      <groupId>mail.jar</groupId>-->
