--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-router": "^4.2.0",
     "@vue/cli-plugin-vuex": "^4.2.0",
     "@vue/cli-service": "^4.2.0",
+    "crypto-js": "^4.0.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "svgo": "^1.3.2",
