--- a/RearEnd/SmallProfitMall/src/main/webapp/WEB-INF/web.xml
+++ b/RearEnd/SmallProfitMall/src/main/webapp/WEB-INF/web.xml
@@ -13,10 +13,9 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath:applicationContext.xml</param-value>
-  </context-param>
+    </context-param>
   <context-param>
     <param-name/>
-
     <param-value/>
   </context-param>
 
@@ -51,6 +50,13 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <!-- 加载log4j配置文件 -->
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j.properties</param-value>
+<!--     <param-value>/WEB-INF/log4j.xml</param-value> -->
+  </context-param>
+
   <!-- druid连接池 启用 Web 监控统计功能    end-->
   <servlet>
     <servlet-name>DruidStatView</servlet-name>
@@ -60,5 +66,15 @@
     <servlet-name>DruidStatView</servlet-name>
     <url-pattern>/druid/*</url-pattern>
   </servlet-mapping>
+
+  <!-- 加载log4j配置文件 -->
+<!--  <context-param>-->
+<!--    <param-name>log4jConfigLocation</param-name>-->
+<!--    <param-value>classpath:log4j.properties</param-value>-->
+<!--    &lt;!&ndash; <param-value>/WEB-INF/log4j.xml</param-value> &ndash;&gt;-->
+<!--  </context-param>-->
+<!--  <listener>-->
+<!--    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>-->
+<!--  </listener>-->
 
 </web-app>
