--- a/RearEnd/SmallProfitMall/src/main/resources/log4j.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/log4j.properties
@@ -1,9 +1,16 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=INFO, CONSOLE            debug   info   warn error fatal
-log4j.rootCategory=info, CONSOLE, LOGFILE
+log4j.rootCategory=debug, CONSOLE, LOGFILE
 
 # Set the enterprise logger category to FATAL and its only appender to CONSOLE.
 log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
+
+#log4j.logger.org.mybatis=DEBUG
+log4j.logger.cn.itcast.dao=DEBUG
+
+log4j.logger.org.springframework.amqp.rabbit.listener.SimpleMessageListenerContainer=warn
+log4j.logger.org.springframework.amqp.rabbit.listener.BlockingQueueConsumer=warn
+
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -12,7 +19,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p 
 
 # LOGFILE is set to be a File appender using a PatternLayout.
 log4j.appender.LOGFILE=org.apache.log4j.FileAppender
-log4j.appender.LOGFILE.File=d:\axis.log
+log4j.appender.LOGFILE.File=axis.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p %30.30c %x - %m\n
