--- a/RearEnd/SmallProfitMall/src/main/webapp/WEB-INF/web.xml
+++ b/RearEnd/SmallProfitMall/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,11 @@
     <param-name/>
     <param-value/>
   </context-param>
+  <!--log4j配置文件开始-->
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j.properties</param-value>
+  </context-param>
 
   <!--配置前端控制器-->
   <servlet>
