--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@liripeng/vue-audio-player": "^1.0.5",
+    "animate.css": "^3.7.2",
     "axios": "0.19.2",
     "core-js": "^3.6.4",
     "default-passive-events": "^1.0.10",
