--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.12.0",
     "vue": "^2.6.11",
     "vue-axios": "2.1.5",
+    "vue-cropper": "^0.5.2",
     "vue-photo-zoom-pro": "^1.3.8",
     "vue-router": "^3.1.5",
     "vue-video-player": "^5.0.2",
