redis集群问题测试

--- a/RearEnd/SmallProfitMall/src/main/resources/redis.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/redis.properties
@@ -1,6 +1,10 @@
-redis.maxTotal=50
-redis.maxIdle=5
+#最大活动对象数
+redis.maxTotal=200
+#最大能够保持idel状态的对象数
+redis.maxIdle=100
+#当池内没有返回对象时，最大等待时间
 redis.maxWaitMillis=2000
+#当调用borrow Object方法时，是否进行有效性检查
 redis.testOnBorrow=true
 redis.host=123.56.151.167
 redis.port=6379
@@ -9,3 +13,19 @@ redis.password=123456
 redis.testWhileIdle=true 
 redis.timeBetweenEvictionRunsMillis=30000  
 redis.numTestsPerEvictionRun=50 
+
+redis.host1=39.101.192.13
+redis.port1=6379
+redis.host2=39.101.192.13
+redis.port2=6380
+redis.host3=39.101.192.13
+redis.port3=6381
+redis.host4=123.56.151.167
+redis.port4=16379
+redis.host5=123.56.151.167
+redis.port5=16380
+redis.host6=123.56.151.167
+redis.port6=16381
+
+
+
