--- a/ForeEnd/small_profit_mall/package.json
+++ b/ForeEnd/small_profit_mall/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.4",
     "default-passive-events": "^1.0.10",
     "element-ui": "^2.12.0",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-cropper": "^0.5.2",
     "vue-photo-zoom-pro": "^1.3.8",
