优化邮件发送使用ssl协议465端口

--- a/RearEnd/SmallProfitMall/src/main/resources/mail.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/mail.properties
@@ -2,10 +2,13 @@
 mail.smtp.host=smtp.163.com
 mail.smtp.username=liliu_muge@163.com
 #密码/客户端授权码
-mail.smtp.password=UMIWCAGUPZSIGZNQ
+mail.smtp.password=OWRXGAMJYSNBARIT
 #编码字符
 mail.smtp.defaultEncoding=utf-8
 #是否进行用户名密码校验
 mail.smtp.auth=true
 #设置超时时间
 mail.smtp.timeout=20000
+mail.smtp.port=465
+mail.smtp.ssl.enable=true
+mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
