修复无地址提交出现的服务器错误

--- a/RearEnd/SmallProfitMall/src/main/resources/mail.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/mail.properties
@@ -9,6 +9,8 @@ mail.smtp.defaultEncoding=utf-8
 mail.smtp.auth=true
 #设置超时时间
 mail.smtp.timeout=20000
+#发送端口 465为ssl 25端口被封禁不建议使用 可以解封
 mail.smtp.port=465
+# 是否开启ssl
 mail.smtp.ssl.enable=true
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
