优化订单支付

--- a/RearEnd/SmallProfitMall/src/main/resources/log4j.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/log4j.properties
@@ -6,11 +6,16 @@ log4j.rootCategory=debug, CONSOLE, LOGFILE
 log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
 
 #log4j.logger.org.mybatis=DEBUG
-log4j.logger.cn.itcast.dao=DEBUG
+log4j.logger.cn.itcast.dao=WARN
+log4j.logger.cn.itcast=WARN
 
+log4j.logger.org.springframework=WARN
+log4j.logger.com.alibaba.druid=WARN
+log4j.logger.org.apache.commons=WARN
+log4j.logger.org.mybatis=WARN
 
-log4j.logger.org.springframework.amqp.rabbit.listener.SimpleMessageListenerContainer=warn
-log4j.logger.org.springframework.amqp.rabbit.listener.BlockingQueueConsumer=warn
+log4j.logger.org.springframework.amqp.rabbit.listener.SimpleMessageListenerContainer=WARN
+log4j.logger.org.springframework.amqp.rabbit.listener.BlockingQueueConsumer=WARN
 
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
