--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /RearEnd/SmallProfitMall/.idea/compiler.xml
 /RearEnd/SmallProfitManagement/target
 /RearEnd/SmallProfitManagement/.idea
+/RearEnd/SmallProfitManagement/*.iml
