--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /RearEnd/SmallProfitManagement/target
 /RearEnd/SmallProfitManagement/.idea
 /RearEnd/SmallProfitManagement/*.iml
+/RearEnd/SmallProfitMall/*.iml
