--- a/RearEnd/SmallProfitManagement/pom.xml
+++ b/RearEnd/SmallProfitManagement/pom.xml
@@ -184,6 +184,20 @@
     </dependency>
 
 
+    <!--缓存-->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>2.1.2.RELEASE</version>
+    </dependency>
+
+
+
 
   </dependencies>
 
