完成商品添加UI部分

--- a/ForeEnd/small-profit-management/package.json
+++ b/ForeEnd/small-profit-management/package.json
@@ -9,10 +9,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.1.4",
+    "antd-img-crop": "^3.4.0",
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bizcharts": "^3.5.8",
     "customize-cra": "^0.9.1",
+    "draft-js": "^0.11.6",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "http-proxy-middleware": "^1.0.3",
     "immutability-helper": "^3.0.2",
     "less": "^3.11.1",
@@ -21,6 +25,7 @@
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
