--- a/RearEnd/SmallProfitManagement/pom.xml
+++ b/RearEnd/SmallProfitManagement/pom.xml
@@ -196,6 +196,18 @@
       <version>2.1.2.RELEASE</version>
     </dependency>
 
+    <!--文件上传架包-->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
+
 
 
 
