--- a/ForeEnd/small-profit-management/package.json
+++ b/ForeEnd/small-profit-management/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "babel-plugin-import": "^1.13.0",
     "bizcharts": "^3.5.8",
+    "blueimp-md5": "^2.16.0",
     "customize-cra": "^0.9.1",
     "draft-js": "^0.11.6",
     "draftjs-to-html": "^0.9.1",
