--- a/ForeEnd/small-profit-management/package.json
+++ b/ForeEnd/small-profit-management/package.json
@@ -33,7 +33,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "spark-md5": "^3.0.1",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "xlsx": "^0.16.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
