--- a/RearEnd/SmallProfitManagement/src/main/resources/log4j.properties
+++ b/RearEnd/SmallProfitManagement/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.logger.cn.itcast=WARN
 log4j.logger.org.springframework=WARN
 log4j.logger.com.alibaba.druid=WARN
 log4j.logger.org.apache.commons=WARN
-log4j.logger.org.mybatis=WARN
+log4j.logger.org.mybatis=DEBUG, Console
 
 log4j.logger.org.springframework.amqp.rabbit.listener.SimpleMessageListenerContainer=WARN
 log4j.logger.org.springframework.amqp.rabbit.listener.BlockingQueueConsumer=WARN
