--- a/ForeEnd/small-profit-management/package.json
+++ b/ForeEnd/small-profit-management/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "spark-md5": "^3.0.1",
     "store": "^2.0.12",
