--- a/RearEnd/SmallProfitManagement/src/main/webapp/WEB-INF/web.xml
+++ b/RearEnd/SmallProfitManagement/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,16 @@
     <param-value>classpath:applicationContext.xml</param-value>
   </context-param>
 
+  <context-param>
+    <param-name/>
+    <param-value/>
+  </context-param>
+  <!--log4j配置文件开始-->
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>classpath:log4j.properties</param-value>
+  </context-param>
+
   <!--配置前端控制器-->
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
