--- a/RearEnd/SmallProfitManagement/pom.xml
+++ b/RearEnd/SmallProfitManagement/pom.xml
@@ -252,6 +252,13 @@
       <version>0.4.8</version>
     </dependency>
 
+    <!--MQ json-->
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.66</version>
+    </dependency>
 
   </dependencies>
 
