--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /RearEnd/SmallProfitManagement/.idea
 /RearEnd/SmallProfitManagement/*.iml
 /RearEnd/SmallProfitMall/*.iml
+/RearEnd/SmallProfitManagement/.idea/workspace.xml
