修改日志文件

--- a/RearEnd/SmallProfitMall/src/main/resources/log4j.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/log4j.properties
@@ -6,11 +6,15 @@ log4j.rootCategory=debug, CONSOLE, LOGFILE
 log4j.logger.org.apache.axis.enterprise=FATAL, CONSOLE
 
 #log4j.logger.org.mybatis=DEBUG
-log4j.logger.cn.itcast.dao=DEBUG
+log4j.logger.cn.itcast=WARN
 
+log4j.logger.org.springframework=WARN
+log4j.logger.com.alibaba.druid=WARN
+log4j.logger.org.apache.commons=WARN
+log4j.logger.org.mybatis=WARN
 
-log4j.logger.org.springframework.amqp.rabbit.listener.SimpleMessageListenerContainer=warn
-log4j.logger.org.springframework.amqp.rabbit.listener.BlockingQueueConsumer=warn
+log4j.logger.org.springframework.amqp.rabbit.listener.SimpleMessageListenerContainer=WARN
+log4j.logger.org.springframework.amqp.rabbit.listener.BlockingQueueConsumer=WARN
 
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
@@ -24,4 +28,3 @@ log4j.appender.LOGFILE.File=axis.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{ISO8601} %-6r [%15.15t] %-5p %30.30c %x - %m\n
-
