查询访问量接口 查询商品支付数量接口

--- a/RearEnd/SmallProfitManagement/pom.xml
+++ b/RearEnd/SmallProfitManagement/pom.xml
@@ -267,6 +267,30 @@
             <version>1.4.0.RELEASE</version>
         </dependency>
 
+        <!--jsonMVC-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.66</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
