修改你们头像

--- a/RearEnd/SmallProfitMall/src/main/resources/mail.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/mail.properties
@@ -1,6 +1,6 @@
 #服务器主机名 smtp.xx.com
-mail.smtp.host=smtp.163.com
-mail.smtp.username=liliu_muge@163.com
+mail.smtp.host=xxx
+mail.smtp.username=xxx
 #密码/客户端授权码
 mail.smtp.password=OWRXGAMJYSNBARIT
 #编码字符
@@ -10,7 +10,7 @@ mail.smtp.auth=true
 #设置超时时间
 mail.smtp.timeout=20000
 #发送端口 465为ssl 25端口被封禁不建议使用 可以解封
-mail.smtp.port=465
+mail.smtp.port=xxx
 # 是否开启ssl
 mail.smtp.ssl.enable=true
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
