--- a/RearEnd/SmallProfitMall/src/main/resources/redis.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/redis.properties
@@ -11,21 +11,21 @@ redis.port=6379
 redis.timeout=0
 redis.password=123456
 redis.testWhileIdle=true 
-redis.timeBetweenEvictionRunsMillis=30000  
-redis.numTestsPerEvictionRun=50 
+redis.timeBetweenEvictionRunsMillis=xxx  
+redis.numTestsPerEvictionRun=xx 
 
-redis.host1=39.101.192.13
-redis.port1=6379
-redis.host2=39.101.192.13
-redis.port2=6380
-redis.host3=39.101.192.13
-redis.port3=6381
-redis.host4=123.56.151.167
-redis.port4=16379
-redis.host5=123.56.151.167
-redis.port5=16380
-redis.host6=123.56.151.167
-redis.port6=16381
+redis.host1=xxx
+redis.port1=xxx
+redis.host2=xxx
+redis.port2=xxx
+redis.host3=xxx
+redis.port3=xxx
+redis.host4=xxx
+redis.port4=xxx
+redis.host5=xxx
+redis.port5=xxx
+redis.host6=xxx
+redis.port6=xxx
 
 
 
