--- a/RearEnd/SmallProfitManagement/src/main/resources/jdbc.properties
+++ b/RearEnd/SmallProfitManagement/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://120.25.154.76:3306/SmallProfitMall?useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT%2B8&allowMultiQueries=true
-jdbc.username=MuGe
-jdbc.password=123456
+jdbc.url=xxx
+jdbc.username=xxx
+jdbc.password=xxx
 jdbc.filters=stat
 jdbc.maxActive=20
 jdbc.initialSize=1
