--- a/RearEnd/SmallProfitManagement/src/main/resources/redis.properties
+++ b/RearEnd/SmallProfitManagement/src/main/resources/redis.properties
@@ -6,26 +6,26 @@ redis.maxIdle=100
 redis.maxWaitMillis=2000
 #当调用borrow Object方法时，是否进行有效性检查
 redis.testOnBorrow=true
-redis.host=123.56.151.167
-redis.port=6379
+redis.host=xxx
+redis.port=xxx
 redis.timeout=0
-redis.password=123456
+redis.password=xxx
 redis.testWhileIdle=true 
 redis.timeBetweenEvictionRunsMillis=30000  
 redis.numTestsPerEvictionRun=50 
 
-redis.host1=39.101.192.13
-redis.port1=6379
-redis.host2=39.101.192.13
-redis.port2=6380
-redis.host3=39.101.192.13
-redis.port3=6381
-redis.host4=123.56.151.167
-redis.port4=16379
-redis.host5=123.56.151.167
-redis.port5=16380
-redis.host6=123.56.151.167
-redis.port6=16381
+redis.host1=xxxx
+redis.port1=xxxx
+redis.host2=xxx
+redis.port2=xxx
+redis.host3=xxxx
+redis.port3=xxx
+redis.host4=xxxx
+redis.port4=xxxx
+redis.host5=xxxx
+redis.port5=xxxx
+redis.host6=xxx
+redis.port6=xxx
 
 
 
