--- a/RearEnd/SmallProfitManagement/src/main/resources/rabbitMq.properties
+++ b/RearEnd/SmallProfitManagement/src/main/resources/rabbitMq.properties
@@ -1,5 +1,5 @@
-rabbitmq.host=39.101.192.13
-rabbitmq.port=5672
-rabbitmq.username=guest
-rabbitmq.password=guest
+rabbitmq.host=xxx
+rabbitmq.port=xxx
+rabbitmq.username=xxx
+rabbitmq.password=xxx
 rabbitmq.vhost=/
