删除相关秘钥

--- a/RearEnd/SmallProfitMall/src/main/resources/mail.properties
+++ b/RearEnd/SmallProfitMall/src/main/resources/mail.properties
@@ -2,7 +2,7 @@
 mail.smtp.host=xxx
 mail.smtp.username=xxx
 #密码/客户端授权码
-mail.smtp.password=OWRXGAMJYSNBARIT
+mail.smtp.password=xxxxxx
 #编码字符
 mail.smtp.defaultEncoding=utf-8
 #是否进行用户名密码校验
